Solved spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
   float: left;
   width: 20%;
   min-width: 200px;
-  margin: 3% 0 0 3%;
+  margin: 3% 0 7% 3%;
   padding: 1% 2% 3% 2%;
   overflow: hidden;
 }
